<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/backgroundImage"

        style="@style/AuthBackgroundImage" />


    <Button
        android:id="@+id/loginButton"
        android:text="@string/login_button_label"
        style="@style/AuthButton" />


    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/sign_up_text"
        android:textColor="@android:color/white"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="65dp"
        android:text="Forgot Password?" />

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">


        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthEditText"
            android:hint="@string/prompt_username" />


        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthEditText"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColorHint="@color/light_gray"
            android:textSize="17sp" />

    </LinearLayout>


</RelativeLayout>